<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_date"
        app:layout_constraintBaseline_toBaselineOf="@+id/editUpCustomerDate"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editUpCustomerDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:ems="10"
        android:hint="@string/et_date"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_course"
        app:layout_constraintBaseline_toBaselineOf="@+id/editUpCustomerCourse"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editUpCustomerCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/et_course"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUpCustomerDate" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_No"
        app:layout_constraintBaseline_toBaselineOf="@+id/editUpCustomerNo"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editUpCustomerNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/et_No"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUpCustomerCourse" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/editUpCustomerName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editUpCustomerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/et_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUpCustomerNo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_lat"
        app:layout_constraintBaseline_toBaselineOf="@+id/editUpCustomerLat"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editUpCustomerLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/et_lat"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUpCustomerName" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_lng"
        app:layout_constraintBaseline_toBaselineOf="@+id/editUpCustomerLng"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editUpCustomerLng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/et_lng"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUpCustomerLat" />

</androidx.constraintlayout.widget.ConstraintLayout>